refactor: apply cqrs & port adapter & repository pattern
